--- a/DOM Manipulations and Events/02. Add-Delete/index.html
+++ b/DOM Manipulations and Events/02. Add-Delete/index.html
@@ -15,7 +15,9 @@ Submit your solutions in the SoftUni judge system at https://judge.softuni.bg/Co
 <body>
     <h1>List of Items</h1>
     <main>
-        <ul id="items"></ul>
+        <ul id="items">
+            <li>Pesho <a href="#" onclick = ''>[Delete]</a></li>
+        </ul>
         <input type="text" id="newItemText" />
         <input type="button" value="Add" onclick="addItem()">
     </main>
